2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.